STEAM-244-blue: 1) better error msg - no status codes, 2) fixed title alignment

--- a/scoring-service-builder/src/main/webapp/extra/custom.css
+++ b/scoring-service-builder/src/main/webapp/extra/custom.css
@@ -74,7 +74,7 @@ body {
 
 .title h2 {
     float: left;
-    padding-left: 1.5em;
+    padding-left: inherit;
     color: rgba(255, 255, 255, 0.8);
     font-size: 1.5em;
 }
